--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,10 @@
         <li>
           <img ng-src="{{user.avatar_url}}&s=50">
           <a ng-href="{{user.html_url}}">{{user.login}}</a>
+          <br>
+          <a ng-href="{{user.followers_url}}">Followers</a>
+          <a ng-href="{{user.following_url}}">Following</a>
+
         </li>
       </ul>
     </div>
